[package]
name = "world_service"
version = "0.1.0"
authors = ["andrejfilipov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
futures = "0.3.4"
rand = "0.7"
serde = "1.0.105"
serde_json = "1.0.50"
#termion = "1.5.5"